<resources>
    <string name="app_name">Administrador de tareas</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="start_session">Iniciar sesion</string>
    <string name="email">Correo</string>
    <string name="remember_password">Recordar mi usuario en este dispositivo</string>
    <string name="start">Iniciar</string>
    <string name="not_has_account">No tengo una cuenta</string>
    <string name="fogot_password">Olvide mi contrasena</string>
</resources>
